--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -51,25 +51,37 @@
 @layer base {
   :root {
     --background: 0, 0, 20;
-    --foreground: 210 40% 98%;
+    --foreground: 255, 255, 255;
+
+    --primary: #4169e1;
+    --accent: #9333ea;
+    --primary-foreground: #2563eb;
+    --accent-foreground: #7c3aed;
+
+    --secondary: #252550;
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: #d1d5db;
+
     --card: 222.2 84% 4.9%;
     --card-foreground: 210 40% 98%;
+
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
-    --primary: 217.2 91.2% 59.8%;
-    --primary-foreground: 222.2 47.4% 11.2%;
-    --secondary: 217.2 32.6% 17.5%;
+
     --secondary-foreground: 210 40% 98%;
-    --muted: 217.2 32.6% 17.5%;
-    --muted-foreground: 215 20.2% 65.1%;
-    --accent: 217.2 32.6% 17.5%;
-    --accent-foreground: 210 40% 98%;
+
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 210 40% 98%;
-    --border: 217.2 32.6% 17.5%;
+
+    --border: 0, 0%, 100%;
     --input: 217.2 32.6% 17.5%;
+
     --ring: 224.3 76.3% 48%;
+
     --radius: 0.5rem;
+
+    --highlight-text: #ffffff;
   }
 }
 
@@ -106,94 +118,5 @@
   to {
     opacity: 1;
     transform: translateY(0);
-  }
-}
-
-/* Black Hole */
-
-@keyframes heroBlackHoleStarsRotate {
-  0% {
-    transform: translateZ(0) translate(-50%, -50%) rotate(0);
-  }
-  to {
-    transform: translateZ(0) translate(-50%, -50%) rotate(-360deg);
-  }
-}
-
-@keyframes heroBlackHoleStarsTwinkle {
-  0% {
-    background: rgba(255, 255, 255, 0);
-    transform: translateZ(0) scale(1);
-  }
-  10% {
-    background: rgb(255, 255, 255);
-  }
-  to {
-    background: rgb(255, 255, 255);
-    transform: translateZ(0) scale(0.5);
-  }
-}
-
-@keyframes heroBlackHoleCirclesRotate {
-  0% {
-    transform: rotate(0);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.hero-black-hole-visible .hero-black-hole-stars {
-  animation: heroBlackHoleStarsRotate 70s linear infinite;
-}
-
-.hero-black-hole-visible .hero-black-hole-stars div {
-  animation: heroBlackHoleStarsTwinkle linear infinite;
-}
-
-.hero-black-hole-visible .hero-black-hole-circle {
-  animation: heroBlackHoleCirclesRotate 100s linear infinite;
-}
-
-.hero-black-hole-circle:before {
-  background: rgba(186, 156, 255, 0.04);
-  border: 1px solid rgba(186, 156, 255, 0.3);
-  border-radius: 50%;
-  content: "";
-  height: calc(100% - 2px);
-  left: 0;
-  pointer-events: none;
-  position: absolute;
-  top: 0;
-  width: calc(100% - 2px);
-}
-
-.hero-black-hole-circle-dot:before {
-  -webkit-backdrop-filter: blur(10px);
-  backdrop-filter: blur(10px);
-  background: rgba(186, 156, 255, 0.01);
-  border: 1px solid rgba(186, 156, 255, 0.3);
-  border-radius: 50%;
-  content: "";
-  height: 6px;
-  left: 0;
-  position: absolute;
-  top: 0;
-  width: 6px;
-}
-
-.lazy-video {
-  opacity: 0;
-  transition: opacity 0.75s cubic-bezier(0.6, 0.6, 0, 1);
-  pointer-events: none;
-}
-
-.lazy-video-loaded {
-  opacity: 1;
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
   }
 }
