feat: finish dashboard 4.0

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,3 +132,16 @@
     --sidebar-ring: 217.2 91.2% 59.8%;
   }
 }
+
+@keyframes aurora {
+  from {
+    background-position: 50% 50%, 50% 50%;
+  }
+  to {
+    background-position: 350% 50%, 350% 50%;
+  }
+}
+
+.animate-aurora {
+  animation: aurora 60s linear infinite;
+}
